--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css"> <!-- ลิงก์ไปยัง style.css ที่อยู่ในโฟลเดอร์เดียวกัน -->
+  <link rel="stylesheet" href="style.css"> <!-- Link to external style.css -->
 </head>
 <body>
   <!-- Animated background elements -->
