--- a/public/index.html
+++ b/public/index.html
@@ -117,15 +117,23 @@
   </section>
 
   <section class="trigon-section animated-border-card">
-    <div class="trigon-content">
-      <h2>Introducing Trigon</h2>
-      <p>Trigon is the ultimate free Android optimization tool and Lua IDE. Experience unparalleled device performance while effortlessly scripting and debugging your Lua code in a user-friendly environment. Unlock new possibilities for both your device and your coding projects.</p>
-      <a href="https://trigonevo.com" target="_blank" class="btn btn-download">
-        <i class="fas fa-external-link-alt"></i> Visit Trigon
-      </a>
-    </div>
-    <div class="trigon-image-container">
-      <img src="./assets/trigon.png" alt="Trigon App Screenshot" class="trigon-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Trigon+Image+Not+Found';">
+    <div class="trigon-inner-content">
+      <div class="trigon-text-content">
+        <span class="trigon-tag">Optimized and Refined</span>
+        <h2>Download Trigon <br>for Android.</h2>
+        <p>Download Trigon, the ultimate free Android optimization tool and Lua IDE. Experience unparalleled device performance while effortlessly scripting and debugging your Lua code in a user-friendly environment. Unlock new possibilities for both your device and your coding projects.</p>
+        <div class="trigon-buttons">
+          <a href="https://trigonevo.com/download" target="_blank" class="btn btn-download">
+            <i class="fas fa-download"></i> Download
+          </a>
+          <a href="https://trigonevo.com" target="_blank" class="btn btn-learn-more">
+            Learn more
+          </a>
+        </div>
+      </div>
+      <div class="trigon-image-container">
+        <img src="./assets/trigon.png" alt="Trigon App Screenshot" class="trigon-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Trigon+Image+Not+Found';">
+      </div>
     </div>
   </section>
 
