--- a/public/index.html
+++ b/public/index.html
@@ -118,10 +118,16 @@
 
   <section class="trigon-section animated-border-card">
     <div class="trigon-inner-content">
+      <!-- Image content on the right -->
+      <div class="trigon-image-container">
+        <img src="./assets/trigon.png" alt="Trigon App Screenshot" class="trigon-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Trigon+Image+Not+Found';">
+      </div>
+      
+      <!-- Text content on the left -->
       <div class="trigon-text-content">
         <span class="trigon-tag">Optimized and Refined</span>
-        <h2>Download Trigon <br>for Android.</h2>
-        <p>Download Trigon, the ultimate free Android optimization tool and Lua IDE. Experience unparalleled device performance while effortlessly scripting and debugging your Lua code in a user-friendly environment. Unlock new possibilities for both your device and your coding projects.</p>
+        <h2>Download Trigon <br>for Android and PC.</h2>
+        <p>Download Trigon, the ultimate free lua optimization tool and Lua IDE. Experience unparalleled device performance while effortlessly scripting and debugging your Lua code in a user-friendly environment. Unlock new possibilities for both your device and your coding projects.</p>
         <div class="trigon-buttons">
           <a href="https://trigonevo.com/download" target="_blank" class="btn btn-download">
             <i class="fas fa-download"></i> Download
@@ -131,14 +137,11 @@
           </a>
         </div>
       </div>
-      <div class="trigon-image-container">
-        <img src="./assets/trigon.png" alt="Trigon App Screenshot" class="trigon-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Trigon+Image+Not+Found';">
-      </div>
     </div>
   </section>
 
   <section class="script-container">
-    <h2 class="section-title">How To Use</h2>
+    <h2 class="section-title">Get Script</h2>
     <div class="script-box animated-border-card">
       <div>
         <div class="script-code">loadstring(game:HttpGet("https://scripts.lumira.xyz"))()</div>
