--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
 
   <section class="trigon-section animated-border-card">
     <div class="trigon-inner-content">
-      <!-- Text content on the left -->
+      <!-- Text content (now on top) -->
       <div class="trigon-text-content">
         <span class="trigon-tag">Optimized and Refined</span>
         <h2>Download Trigon <br>for Android.</h2>
@@ -135,7 +135,7 @@
           </a>
         </div>
       </div>
-      <!-- Image content on the right -->
+      <!-- Image content (now on bottom) -->
       <div class="trigon-image-container">
         <img src="./assets/trigon.png" alt="Trigon App Screenshot" class="trigon-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Trigon+Image+Not+Found';">
       </div>
