--- a/public/index.html
+++ b/public/index.html
@@ -121,9 +121,14 @@
 
   <section class="trigon-section animated-border-card">
     <div class="trigon-inner-content">
-      <!-- Text content (now on top) -->
+      <!-- Image content on the left -->
+      <div class="trigon-image-container">
+        <img src="./assets/trigon.png" alt="Trigon App Screenshot" class="trigon-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Trigon+Image+Not+Found';">
+      </div>
+      
+      <!-- Text content on the right -->
       <div class="trigon-text-content">
-        <span class="trigon-tag">Optimized and Refined</span>
+        <span class="trigon-tag">Partner</span>
         <h2>Download Trigon <br>for Android.</h2>
         <p>Download Trigon, the ultimate free Android optimization tool and Lua IDE. Experience unparalleled device performance while effortlessly scripting and debugging your Lua code in a user-friendly environment. Unlock new possibilities for both your device and your coding projects.</p>
         <div class="trigon-buttons">
@@ -134,10 +139,6 @@
             Learn more
           </a>
         </div>
-      </div>
-      <!-- Image content (now on bottom) -->
-      <div class="trigon-image-container">
-        <img src="./assets/trigon.png" alt="Trigon App Screenshot" class="trigon-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Trigon+Image+Not+Found';">
       </div>
     </div>
   </section>
