--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,19 @@
     </div>
   </section>
 
+  <!-- Moved "How To Use" section above Trigon section -->
+  <section class="script-container">
+    <h2 class="section-title">How To Use</h2>
+    <div class="script-box animated-border-card">
+      <div>
+        <div class="script-code">loadstring(game:HttpGet("https://scripts.lumira.xyz"))()</div>
+      </div>
+    </div>
+    <button class="copy-btn" id="copyScriptBtn">
+      <i class="far fa-copy"></i> Copy Script
+    </button>
+  </section>
+
   <section class="trigon-section animated-border-card">
     <div class="trigon-inner-content">
       <!-- Image content on the left -->
@@ -141,18 +154,6 @@
         </div>
       </div>
     </div>
-  </section>
-
-  <section class="script-container">
-    <h2 class="section-title">How To Use</h2>
-    <div class="script-box animated-border-card">
-      <div>
-        <div class="script-code">loadstring(game:HttpGet("https://scripts.lumira.xyz"))()</div>
-      </div>
-    </div>
-    <button class="copy-btn" id="copyScriptBtn">
-      <i class="far fa-copy"></i> Copy Script
-    </button>
   </section>
 
   <footer>
