--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,28 @@
     </div>
   </section>
 
+  <!-- New Lumira PC Section -->
+  <section class="lumira-pc-section animated-border-card">
+    <div class="lumira-pc-inner-content">
+      <!-- Image content on the left -->
+      <div class="lumira-pc-image-container">
+        <img src="./assets/lumirapc.png" alt="Lumira PC Screenshot" class="lumira-pc-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Lumira+PC+Image+Not+Found';">
+      </div>
+      
+      <!-- Text content on the right -->
+      <div class="lumira-pc-text-content">
+        <span class="lumira-pc-tag">Free & Powerful</span>
+        <h2>Introducing Lumira PC</h2>
+        <p>Lumira PC is a free Roblox Executor offering unparalleled performance with 99% exploit stability (Unc) and 98% script compatibility (Sunc). Experience seamless execution and unlock a new dimension of possibilities in your favorite Roblox games. Download now and elevate your gameplay!</p>
+        <div class="lumira-pc-buttons">
+          <a href="#" target="_blank" class="btn btn-download">
+            <i class="fas fa-download"></i> Download Lumira PC
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Moved "How To Use" section above Trigon section -->
   <section class="script-container">
     <h2 class="section-title">How To Use</h2>
