--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
   </header>
 
   <section class="hero">
-    <h1>Premium Roblox Script Hub</h1>
-    <p>Access the most advanced and undetected Roblox scripts with our premium hub. Regular updates included.</p>
+    <h1>Unlock Your Roblox Potential</h1>
+    <p>Access the most advanced and undetected Roblox scripts with our premium hub. Enjoy daily updates and exclusive features.</p>
     <div class="buttons">
       <a href="#key" class="btn btn-download" id="getKeyButtonHero">
         <i class="fas fa-key"></i> Get Key
@@ -119,15 +119,10 @@
     </div>
   </section>
 
-  <!-- New Lumira PC Section -->
+  <!-- Lumira PC Section -->
   <section class="lumira-pc-section animated-border-card">
     <div class="lumira-pc-inner-content">
-      <!-- Image content on the left -->
-      <div class="lumira-pc-image-container">
-        <img src="./assets/lumirapc.png" alt="Lumira PC Screenshot" class="lumira-pc-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Lumira+PC+Image+Not+Found';">
-      </div>
-      
-      <!-- Text content on the right -->
+      <!-- Text content on the left -->
       <div class="lumira-pc-text-content">
         <span class="lumira-pc-tag">Free & Powerful</span>
         <h2>Introducing Lumira PC</h2>
@@ -138,10 +133,14 @@
           </a>
         </div>
       </div>
+      <!-- Image content on the right -->
+      <div class="lumira-pc-image-container">
+        <img src="./assets/lumirapc.png" alt="Lumira PC Screenshot" class="lumira-pc-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Lumira+PC+Image+Not+Found';">
+      </div>
     </div>
   </section>
 
-  <!-- Moved "How To Use" section above Trigon section -->
+  <!-- How To Use / Script Section -->
   <section class="script-container">
     <h2 class="section-title">How To Use</h2>
     <div class="script-box animated-border-card">
@@ -154,14 +153,10 @@
     </button>
   </section>
 
+  <!-- Trigon Section -->
   <section class="trigon-section animated-border-card">
     <div class="trigon-inner-content">
-      <!-- Image content on the left -->
-      <div class="trigon-image-container">
-        <img src="./assets/trigon.png" alt="Trigon App Screenshot" class="trigon-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Trigon+Image+Not+Found';">
-      </div>
-      
-      <!-- Text content on the right -->
+      <!-- Text content on the left -->
       <div class="trigon-text-content">
         <span class="trigon-tag">Partner</span>
         <h2>Download Trigon <br>for Android.</h2>
@@ -174,6 +169,10 @@
             Learn more
           </a>
         </div>
+      </div>
+      <!-- Image content on the right -->
+      <div class="trigon-image-container">
+        <img src="./assets/trigon.png" alt="Trigon App Screenshot" class="trigon-image" onerror="this.onerror=null;this.src='https://placehold.co/600x350/1e293b/e2e8f0?text=Trigon+Image+Not+Found';">
       </div>
     </div>
   </section>
