--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
       <div class="social-links">
         <a href="#"><i class="fab fa-discord"></i></a>
       </div>
-      <p class="copyright">&copy; 2025 Lumira Hub</p>
+      <p class="copyright">&copy; 2025 Lumira Hub Ui by nongkaow</p>
     </div>
   </footer>
 
