--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <p>Access the most advanced and undetected Roblox scripts with our premium hub. Enjoy daily updates and exclusive features.</p>
     <div class="buttons">
       <a href="#key" class="btn btn-download" id="getKeyButtonHero">
-        <i class="fas fa-key"></i> Get Key
+        <i class="fas fa-download"></i> Download
       </a>
       <a href="#" class="btn btn-discord">
         <i class="fab fa-discord"></i> Join Discord
